@@ -98,7 +98,7 @@ public class JsonFrontend extends Frontend {
 
 	@Override
 	public Input<byte[]> createImage(InputComponentListener changeListener) {
-		throw new RuntimeException("Image not yet implemented in JsonFrontend");
+		return new JsonImage(changeListener);
 	};
 	
 	@Override
