@@ -7,6 +7,7 @@ Every release contains many small fixes.
 * Remove RenderType. Redesign Rendering concept
 * Redesign Lookup UI concept
 * validation refactoring
+* JsonImage : image upload in JsonFrontend
 
 === 1.14.0.0
 * Allow wizards to have a last step without active next button
